--- a/style.css
+++ b/style.css
@@ -82,3 +82,19 @@ h3{
     line-height: 1.4;
     font-size: 90%;
 }
+.portfolio{
+    width: 88%;
+    margin-left: 6%;
+}
+.portfolio-title{
+    padding-top: 4.5%;
+    text-align: center;
+    letter-spacing: 1px;
+    color: #555;
+}
+.portfolio--top img,
+.portfolio--bottom img{
+    width: 280px;
+    padding: 1%;
+    padding-bottom: 2%;
+}
