--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    background-color: #eee;
+    background-color: #f4f4f4;
     color: #777777;
 }
 h3{
@@ -82,6 +82,37 @@ h3{
     line-height: 1.4;
     font-size: 90%;
 }
+.what-we-do{
+    /* width: 90%; */
+    margin-left: 5%;
+    margin-bottom: 2%;
+}
+.what-we-do-title{
+    text-align: center;
+    padding: 6% 0 3% 0;
+}
+.what-we-do h4{
+    text-transform: uppercase;
+    color: #333;
+    padding: 8%;
+    font-size: 120%;
+    letter-spacing: 2px;
+}
+.column{
+    width: 32%;
+    float: left;
+    padding: 1%;
+    text-align: center;
+}
+.column p{
+    line-height: 25px;
+    font-size: 90%;
+}
+.row::after{
+    content: "";
+    display: table;
+    clear: both;
+}
 .portfolio{
     width: 88%;
     margin-left: 6%;
@@ -111,7 +142,7 @@ h3{
 }
 .form{
     width: 90%;
-    margin-left: 10%;
+    margin-left: 13%;
 }
 .form input{
     border: 2px solid #ffff;
@@ -136,7 +167,7 @@ h3{
     height: 30vh;
     margin-top: 4%;
     width: 60%;
-    margin-left: 20%;
+    margin-left: 22%;
 }
 .footer img{
     padding: 1%;
