--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ h3{
 .what-we-do-title{
     text-align: center;
     padding: 6% 0 3% 0;
+    margin-left: 40%;
 }
 .what-we-do h4{
     text-transform: uppercase;
@@ -97,6 +98,9 @@ h3{
     padding: 8%;
     font-size: 120%;
     letter-spacing: 2px;
+}
+.icon{
+    margin-left: 10%;
 }
 .column{
     width: 32%;
